2007-07-28  Nick Roberts  <nickrob@snap.net.nz>

	* bindings.el (mode-line-remote): Use updated %@ construct.

2007-07-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* calendar/cal-bahai.el (calendar-bahai-month-name-array)
	(calendar-bahai-epoch, calendar-bahai-leap-year-p)
	(calendar-bahai-leap-base, calendar-bahai-prompt-for-date)
	(diary-list-bahai-entries, diary-bahai-mark-entries)
	(calendar-bahai-mark-date-pattern, diary-insert-bahai-entry)
	(diary-bahai-insert-monthly-entry, diary-bahai-insert-yearly-entry):
	New names to clean up namespace.
	(list-bahai-diary-entries, mark-bahai-diary-entries)
	(insert-bahai-diary-entry, insert-monthly-bahai-diary-entry)
	(insert-yearly-bahai-diary-entry, mark-bahai-calendar-date-pattern):
	Add compatibility aliases.

	* calendar/appt.el: Don't wrap defvar within eval-when-compile.

	* calendar/cal-move.el (calendar-scroll-left, calendar-scroll-right)
	(calendar-scroll-left-three-months)
	(calendar-scroll-right-three-months): Clean up namespace.
	(scroll-calendar-left, scroll-calendar-right)
	(scroll-calendar-left-three-months)
	(scroll-calendar-right-three-months): Add compatibility aliases.

	* calendar/cal-move.el (calendar-scroll-left, calendar-scroll-right):
	Behave like mouse-scroll-calendar-* when used from the mouse.

	* calendar/cal-menu.el (cal-menu-scroll-menu)
	(cal-menu-global-mouse-menu):
	* calendar/calendar.el (calendar-mode-map):
	Use new calendar-scroll-* names.
	(mouse-scroll-calendar-left, mouse-scroll-calendar-right):
	Remove.  Use calendar-scroll-* directly instead.

2007-07-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/advice.el (ad-interactive-p, ad-interactive-form): Remove.
	(ad-body-forms, ad-advised-interactive-form, ad-make-cache-id)
	(ad-make-advised-definition, ad-cache-id-verification-code):
	Use commandp and interactive-form instead.

2007-07-26  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el: Relicense to GPLv3 or later.