@@ -1,3 +1,8 @@
+2007-07-28  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-git.el (vc-git-print-log): Support both the old single file
+	interface and the new one.
+
 2007-07-28  Nick Roberts  <nickrob@snap.net.nz>
 
 	* bindings.el (mode-line-remote): Use updated %@ construct.
